<resources>
    <string name="auth_key">"Bearer "</string>
    <string name="app_name">Labywhere</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="transition_button_to_bottom">TransitionButtonToBottom</string>
</resources>
