<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/primary"
    tools:context="com.aribon.labywhere.views.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/edit_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/edit_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/edit_signup_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstname"
            style="@style/CustomEditText" />

        <EditText
            android:id="@+id/edit_signup_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastname"
            style="@style/CustomEditText" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signup_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/CustomButton"/>

</RelativeLayout>
