<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/flat_blue"
    tools:context=".ui.screen.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusable="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/auth_login_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            style="@style/CustomEditText"/>

        <EditText
            android:id="@+id/auth_login_edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:drawableLeft="@drawable/ic_lock_white_24dp"
            style="@style/CustomEditText"/>

    </LinearLayout>

    <Button
        android:id="@+id/auth_login_valid_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:transitionName="@string/transition_button_to_bottom"
        style="@style/CustomButton"/>

</LinearLayout>